--- a/src/views/homePage.html
+++ b/src/views/homePage.html
@@ -96,10 +96,10 @@
         </select>
         <br>
         first name
-        <input type="text" name="firstName" placeholder="password" minlength="2" maxlength="200">
+        <input type="text" name="firstName" placeholder="firstName" minlength="2" maxlength="200">
         <br>
         last name
-        <input type="text" name="lastName" placeholder="password" minlength="2" maxlength="200">
+        <input type="text" name="lastName" placeholder="lastName" minlength="2" maxlength="200">
         <br>
         gender
         <select name="gender" id="gender">
@@ -111,6 +111,7 @@
         country, 3ayzen ne2lebha dropdown list hhhhh
         <input type="text" name="country" placeholder="country" minlength="2" maxlength="200">
         <br>
+        <input type="submit" value="add new user">
         <hr>
     </form>
 
