add type field (for now)

--- a/src/views/homePage.html
+++ b/src/views/homePage.html
@@ -81,6 +81,9 @@
         <input type="text" name="userId" placeholder="your own User ID" required
             oninvalid="alert('you must enter a user ID')">
         <br>
+        <input type="text" name="userType" placeholder="type" required
+        oninvalid="alert('you must enter a user type')">
+        <br>
         New Account details
         <br>
         username
