--- a/src/views/homePage.html
+++ b/src/views/homePage.html
@@ -25,7 +25,7 @@
             <option value="CORPORATE_TRAINEE">Corporate trainee</option>
         </select>
         <br><br>
-        <select id="country" name="selectCountry" class="form-control">
+        <select name="selectedCountry">
             <option value="Afghanistan">Afghanistan</option>
             <option value="Åland Islands">Åland Islands</option>
             <option value="Albania">Albania</option>
