create course html SALMA

--- a/src/views/instructorGeneral.html
+++ b/src/views/instructorGeneral.html
@@ -20,8 +20,8 @@
     
 </form>
 
-<form method="post" action='/createcourse'></form>
-<form>
+<form method="get" action='/createCo'>
+
     <input type="submit" value="Create Course">
 </form>
 
