--- a/src/views/viewCoursesWithPrice.html
+++ b/src/views/viewCoursesWithPrice.html
@@ -39,7 +39,7 @@
         <br>
         max price
         <select name="maxPrice" id="maxPrice">
-            <option >choose</option>
+            <option value=null>choose</option>
             <option value=100>100</option>
             <option value=1000>1000</option>
             <option value=10000>10000</option>
@@ -48,7 +48,7 @@
         <br>
         subject
         <select name="subject" id="subject">
-            <option >choose</option>
+            <option value=null>choose</option>
             <option value="CS">CS</option>
             <option value="English">English</option>
             <option value="Biology">Biology</option>
@@ -56,7 +56,8 @@
         <br>
         rating
         <select name="rating" id="rating">
-            <option>choose</option>
+            <option value=null>choose</option>
+            <option value=0>0</option>
             <option value=1>1</option>
             <option value=2>2</option>
             <option value=3>3</option>
