whole Instructor part

--- a/src/views/instructorGeneral.html
+++ b/src/views/instructorGeneral.html
@@ -20,12 +20,12 @@
     
 </form>
 
-<form method="post" action='/createcourse'></form>
-<form>
+<form method="get" action='/createCo'>
+
     <input type="submit" value="Create Course">
 </form>
 
-<form method="post" action='/selectCountry'></form>
+<form method="get" action='/selectCountry'>
     <input type="submit" value="Change My Country">
 </form>
 
