--- a/src/views/viewCoursesInst.html
+++ b/src/views/viewCoursesInst.html
@@ -66,7 +66,7 @@
             <option value="">-</option>
             <option value="science">Science</option>
             <option value="Math">Math</option>
-            <option value="English">English</option> 
+            <option value="biology">Biology</option> 
         </select>
 
         <br>
@@ -75,9 +75,10 @@
 
         <select name="minPrice">
             <option value="">-</option>
-            <option value="10">10</option>
-            <option value="20">20</option>
-            <option value="30">30</option> 
+            <option value="0">0</option>
+            <option value="100">100</option>
+            <option value="200">200</option>
+            <option value="10000">10000</option> 
         </select>
 
         <br>
@@ -87,9 +88,9 @@
         <select name="maxPrice">
             <option value="">-</option>
             <option value="270">270</option>
-            <option value="30">30</option>
-            <option value="20">20</option>
-            <option value="10">10</option> 
+            <option value="2000">2000</option>
+            <option value="7000">7000</option>
+            <option value="10000">10000</option> 
         </select>
     
      <input type="submit" value="Filter" 
