add frontend pages

--- a/src/views/instructorGeneral.html
+++ b/src/views/instructorGeneral.html
@@ -11,7 +11,7 @@
 </head>
  
 <body>
-<form method="get" action='/search'>
+<form method="get" action='/viewCoursesWithPricePage'>
     <input type="submit" value="Search All Courses">
 </form>
 
