--- a/src/views/viewCoursesInst.html
+++ b/src/views/viewCoursesInst.html
@@ -36,8 +36,7 @@
         <input type="text" name="userId" placeholder="User ID" id="userId" required
         oninvalid="alert('you must enter your id')">
     
-     <input type="text" name="search" placeholder="search" id="searchword" required
-        oninvalid="alert('you must enter your username')">
+     <input type="text" name="search" placeholder="search" id="searchword">
     
      <input type="submit" value="Search in my courses" 
      onClick="add(document.getElementById('userId').value,document.getElementById('username').value, 
